stop h2 from overflowing in prizes section

--- a/css/style.css
+++ b/css/style.css
@@ -12914,9 +12914,9 @@ textarea.form-control {
 
 #prize-section h2 {
     text-align: center;
-    margin-bottom: 7rem;
+    margin-bottom: 4rem;
     color: white;
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 .prize {
